minio_traefik.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingressroute
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`s3.dockr.life`)
      kind: Rule
      services:
        - name: minio
          port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.dockr.life`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
